<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="7dp">
    <!-- Top Bar -->

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/matchalong"
        app:srcCompat="@drawable/matchalong"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintBounds">

        <TextView
            android:id="@+id/txtMatchaCookies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="#EA8C95"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtDifficultyLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/txtMatchaCookies"
            android:layout_alignBaseline="@id/txtMatchaCookies"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/difficulty_level"
            android:textColor="#75473D"
            android:textSize="16sp"
            tools:ignore="VisualLintBounds" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtMatchaCookiesDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFEA8C95"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        tools:ignore="VisualLintBounds" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp"
        tools:ignore="VisualLintBounds">

        <TextView
            android:id="@+id/txtIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/ingredients"
            android:textSize="16sp"
            android:textColor="#75473D"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/txtServings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#75473D"
            android:textSize="12sp"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/txtIngredientsMatchaCookies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFEA8C95"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/txtpreparation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/preparation"
            android:textColor="#75473D"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            tools:ignore="VisualLintBounds" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="VisualLintBounds">

            <TextView
                android:id="@+id/txttotal_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/total_time"
                android:textColor="#75473D"
                android:textSize="14sp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/txtprep_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/prep_time"
                android:textColor="#75473D"
                android:textSize="14sp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/txtcook_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/cook_time"
                android:textColor="#75473D"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="VisualLintBounds">

            <TextView
                android:id="@+id/txttotalTimeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFEA8C95"
                android:textSize="16sp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/txtprepTimeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFEA8C95"
                android:textSize="16sp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/txtcookTimeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFEA8C95"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtinstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/instruction"
            android:textColor="#75473D"
            android:layout_marginTop="14dp"
            android:textSize="16sp"
            android:layout_marginBottom="4dp"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/txtinstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFEA8C95"
            android:textSize="16sp"
            android:layout_marginTop="2dp"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>
</LinearLayout>
