<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backround"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:background="#75473D"
        android:gravity="center_vertical"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="53dp"
            android:layout_height="50dp"
            android:background="#75473D"
            app:srcCompat="@drawable/baseline_arrow_back_24" />

        <ImageButton
            android:id="@+id/imgLogo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="255dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/pink_white_cute_illustration_cake_logo"
            android:background="@null"
            android:scaleType="centerCrop" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/design2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="34sp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/imageLayout"
            app:layout_constraintStart_toEndOf="@id/imageView3"
            app:layout_constraintEnd_toStartOf="@id/imageView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.1" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            app:srcCompat="@drawable/design1" />
    </LinearLayout>

    <!-- Linear Layout for About Text -->
    <LinearLayout
        android:id="@+id/aboutLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/imageLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomBar">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="300dp"
            android:layout_height="700dp"
            android:layout_marginLeft="52dp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/bottomBar"
            app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#B78650"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/homeicon"
                app:srcCompat="@drawable/homeicon" />

            <TextView
                android:id="@+id/txtHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/home"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/imageButton12"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/profileprofileicon"
                app:srcCompat="@drawable/profileprofileicon" />

            <TextView
                android:id="@+id/txtProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/profile"
                android:textColor="#FFFFFF"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
